--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "core-js": "2.6.5",
     "epic-spinners": "^1.1.0",
     "flatpickr": "4.5.7",
+    "luxon": "^1.19.3",
+    "moment": "^2.24.0",
     "nouislider": "13.1.4",
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
-    "vue-chartjs": "3.4.2",
-    "vue-clipboard2": "0.3.0",
+    "vue-clipboard2": "^0.3.1",
+    "vue-datetime": "^1.0.0-beta.10",
     "vue-flatpickr-component": "8.1.2",
     "vue-notification": "^1.3.16",
     "vue-router": "3.0.1",
     "vue2-transitions": "0.3.0",
-    "vuex": "^3.1.1"
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
