--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
     "@vue/cli-plugin-pwa": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "babel-eslint": "^10.0.1",
+    "base64-inline-loader": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "html-webpack-inline-source-plugin": "^0.0.10",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^1.0.0",
     "vue-template-compiler": "2.6.6"
   },
   "eslintConfig": {
